welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:33: error: Unmatched closing brace '}' ignored here
}
^